--- a/examples/01-hello-fieldkit.html
+++ b/examples/01-hello-fieldkit.html
@@ -2,9 +2,7 @@
 <html>
 <head>
     <title>01 Hello FieldKit</title>
-
     <link type="text/css" href="assets/style.css">
-
     <script type="text/javascript" src="assets/coffee-script.js"></script>
     <script type="text/javascript" src="../build/fieldkit.js"></script>
 </head>
@@ -12,15 +10,15 @@
     <div id="container"></div>
     <script type="text/coffeescript">
         class Hello extends fk.client.Sketch
-            init: ->
+            setup: ->
                 console.log("init " + this)
 
 
             draw: ->
-                this.clear()
+                @background()
 
-                this.fill(0)
-                this.rect(this.mouseX, this.mouseY, 5, 5)
+                @fill(0)
+                @rect(this.mouseX, this.mouseY, 5, 5)
 
         new Hello()
     </script>
