Added requestAnimationFrame polyfill to example player.

--- a/examples/index.html
+++ b/examples/index.html
@@ -8,6 +8,7 @@
 
     <script type="text/javascript" src="assets/coffee-script.js"></script>
     <script type="text/javascript" src="assets/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="assets/raf.js"></script>
 
     <!-- code mirror editor -->
     <link href="assets/codemirror/codemirror.css" rel="stylesheet" type="text/css">
