Fixed undefined variable bug with global fk object in Firefox and updated examples accordingly.

--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>FieldKit.js / Examples</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <link href="assets/style.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
