Moved external libraries into separate folder so they can be excluded.

--- a/examples/index.html
+++ b/examples/index.html
@@ -7,9 +7,9 @@
     <link href="assets/style.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 
-    <script type="text/javascript" src="assets/coffee-script.js"></script>
-    <script type="text/javascript" src="assets/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="assets/raf.js"></script>
+    <script type="text/javascript" src="assets/js/coffee-script.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="assets/js/raf.js"></script>
 
     <!-- code mirror editor -->
     <link href="assets/codemirror/codemirror.css" rel="stylesheet" type="text/css">
