Added support to save images to example UI.

--- a/examples/index.html
+++ b/examples/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="assets/js/coffee-script.js"></script>
     <script type="text/javascript" src="assets/js/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="assets/js/raf.js"></script>
+    <script type="text/javascript" src="assets/js/canvas2image.js"></script>
+    <script type="text/javascript" src="assets/js/base64.js"></script>
 
     <!-- code mirror editor -->
     <link href="assets/codemirror/codemirror.css" rel="stylesheet" type="text/css">
@@ -29,6 +31,7 @@
       <div id="nav">
           <select id="menu"></select>
           <a id="showCode">show code</a>
+          <a id="saveImage">save image</a>
       </div>
   </header>
 
@@ -38,6 +41,8 @@
 
       <div id="code">
       </div>
+
+      <image id="image"></image>
   </div>
 </body>
 </html>
